--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <div class="pageContainer">
         <div class="menuContainer">
             <ul>
-                <li>Main</li>
+                <li>Home</li>
                 <li>Portfolio</li>
                 <li>About</li>
                 <li>Services</li>
-                <li>Contact / Booking</li>
+                <li>Book</li>
             </ul>
         </div>
         <div class="mainContainer">
