added hero + mainpage almost mobile compatible

--- a/index.html
+++ b/index.html
@@ -13,15 +13,19 @@
     <div class="pageContainer">
         <div class="menuContainer">
             <ul>
-                <li>Home</li>
-                <li>Portfolio</li>
-                <li>About</li>
-                <li>Services</li>
-                <li>Book</li>
+                <li data-pageBut="Home" class="currentPage">Home</li>
+                <li data-pageBut="Portfolio">Portfolio</li>
+                <li data-pageBut="About">About</li>
+                <li data-pageBut="Services">Services</li>
+                <li data-pageBut="Book">Book</li>
             </ul>
         </div>
         <div class="mainContainer">
-            <div class="meSection"></div>
+            <div class="meSection">
+                <h1>Auron Noir | Photographer</h1>
+                <h3>Tailored visual content through my lens.</h3>
+                <button>See how I can help you</button>
+            </div>
             <div class="divider"></div>
             <div class="typesSection">
                 <div class="portraitsView">
