put alert on portfolio, create contact, update home

--- a/index.html
+++ b/index.html
@@ -15,16 +15,15 @@
             <ul>
                 <li data-pageBut="Home" class="currentPage">Home</li>
                 <li data-pageBut="Portfolio">Portfolio</li>
-                <li data-pageBut="About">About</li>
                 <li data-pageBut="Services">Services</li>
-                <li data-pageBut="Book">Book</li>
+                <li data-pageBut="Contact">Contact</li>
             </ul>
         </div>
         <div class="mainContainer">
             <div class="meSection">
                 <h1>Auron Noir | Photographer</h1>
                 <h3>Tailored visual content through my lens.</h3>
-                <button>See how I can help you</button>
+                <div class="cta">Check out my offers!</div>
             </div>
             <div class="divider"></div>
             <div class="typesSection">
