added service page

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="meSection">
                 <h1>Auron Noir | Photographer</h1>
                 <h3>Tailored visual content through my lens.</h3>
-                <div class="cta">Check out my offers!</div>
+                <div class="cta">Check out packages!</div>
             </div>
             <div class="divider"></div>
             <div class="typesSection">
