--- a/services.html
+++ b/services.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+        <link rel="stylesheet" href="styles/services.css">
 <body>
-    <div class="servicesContainer"></div>
+    <div class="servicesContainer">
+        <div class="topSpacer"></div>
+        <div class="promoImages">
+            <div class="promo"></div>
+            <div class="promo"></div>
+            <div class="promo"></div>
+        </div>
+        <div class="serviceSelectContainer">
+            <div data-num="1" class="packageType">Portraits</div>
+            <div data-num="2" class="packageType">Corporate Headshots</div>
+            <div data-num="3" class="packageType">Events</div>
+        </div>
+        <div class="servicePackageSelectContainer">
+        </div>
+    </div>
 </body>
 </html>
